[package]
name = "ospf"
version = "0.1.0"
edition = "2021"


[lib]
name = "ospf_lib"
path = "src/lib.rs"


[[bin]]
name = "ospf-cli"
path = "src/main.rs"

[dependencies]
clap = "4.5.7"
colored = "2.1.0"
pnet = "0.35.0"
tokio = {version ="1.38.0", features = ["full"]}


[features]
debug = []
log = []
default = ["log", "debug"]
